Added new html files, updated css, added images.

--- a/css/w3.css
+++ b/css/w3.css
@@ -236,3 +236,5 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .w3-button:hover {color:#000 !important; background-color:#9eb1bb !important}
 .w3-button:active {color:#fff !important; background-color:#303e45 !important}
+
+.w3-padding-8{padding-top:8px!important;padding-bottom:8px!important}
