--- a/css/w3.css
+++ b/css/w3.css
@@ -239,3 +239,4 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .w3-padding-8{padding-top:8px!important;padding-bottom:8px!important}
 .w3-link {text-decoration: none;}.w3-link:hover {text-decoration: underline;}
+.w3-outline{color: white;text-shadow:-2px -2px 4px #000,2px -2px 4px #000,-2px 2px 4px #000,2px 2px 4px #000;  }
